<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/xx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/xT"
        android:gravity="center"
        android:inputType="numberDecimal|numberSigned"/>
    <EditText
        android:id="@+id/yy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/yT"
        android:gravity="center"
        android:inputType="numberDecimal|numberSigned"/>
    <EditText
        android:id="@+id/one_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/hintCircle"
        android:gravity="center"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/button_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_main"/>

    <TextView
        android:id="@+id/circle_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"/>



    <TextView
        android:id="@+id/circle_square"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"/>



    <TextView
        android:id="@+id/circle_perimeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"/>

</LinearLayout>